--- a/week2/index.html
+++ b/week2/index.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HTML Practice</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
+    <link rel="manifest" href="site.webmanifest" />
   </head>
   <body>
     <header>
       <h1>Interactive Media</h1>
+      <img src="cover.png" alt="this is a cover image" />
       <h2>Instructor: Dr. Rohit Ashok Khot</h2>
       <!-- i used h2 for structuring my sub heading -->
     </header>
