--- a/week2/index.html
+++ b/week2/index.html
@@ -23,8 +23,8 @@
     </nav>
     <main>
       <h3>Email: rohitashok.khot@rmit.edu.au (Weekdays 9am-5pm)</h3>
-      <button>Enrolment</button>
-      <button>Syllabus</button>
+      <button id="enrol-btn">Enrolment</button>
+      <button id="syllabus-btn">Syllabus</button>
       <ul>
         <li>Group 1: Every Tuesday (09:30 am - 12:30 pm)</li>
         <li>Group 2: Every Tuesday (01:30 pm - 04:30 pm)</li>
