--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -6,6 +6,94 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>this is my first assignment</h1>
+    <h1>Assignment 1</h1>
+    <section>
+      <h2>
+        What was the first thing you paid attention to when interacting with the
+        experience?
+      </h2>
+      <p></p>
+    </section>
+    <section>
+      <h2>
+        Spend two minutes with the experience and create a list of each of your
+        discrete actions.
+      </h2>
+      <br />
+    </section>
+    <section>
+      <h2>
+        What part of the experience did you spend the most time engaging with?
+      </h2>
+    </section>
+    <br />
+    <section>
+      <h2>
+        What was the most common action in your two minute interaction with the
+        experience?
+      </h2>
+    </section>
+    <br />
+    <section>
+      <h2>
+        What is your impression of the intended primary goal of the interactive
+        experience?
+      </h2>
+    </section>
+    <br />
+    <section>
+      <h2>
+        How does the interactive experience communicate this primary goal?
+      </h2>
+    </section>
+    <br />
+    <section>
+      <h2>
+        What is your impression of how the experience should be interacted with
+        over time? (For how long and how many different times)
+      </h2>
+    </section>
+    <br />
+    <section>
+      <h2>
+        How does the interactive experience communicate how it should be
+        interacted with over time?
+      </h2>
+    </section>
+    <br />
+    <section>
+      <h2>
+        What other media forms (digital or otherwise) does the experience
+        reference?
+      </h2>
+    </section>
+    <br />
+    <section>
+      <h2>
+        What does this reference/s communicate to you about how you should act
+        when engaging with your research experience?
+      </h2>
+    </section>
+    <br />
+    <section>
+      <h2>
+        What does this reference/s communicate to you about how you should feel
+        when engaging with your research experience?
+      </h2>
+    </section>
+    <br />
+    <section>
+      <h2>
+        What is the most frustrating part of the interaction to you and what
+        makes that part frustrating?
+      </h2>
+    </section>
+    <br />
+    <section>
+      <h2>
+        What is the most satisfying part of the interaction to you and what
+        makes that part satisfying?
+      </h2>
+    </section>
   </body>
 </html>
