--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -3,97 +3,302 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Interactive Experience Research Project</title>
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Boldonse&family=Inconsolata:wght@200..900&family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <h1>Assignment 1</h1>
-    <section>
-      <h2>
-        What was the first thing you paid attention to when interacting with the
-        experience?
-      </h2>
-      <p></p>
-    </section>
-    <section>
-      <h2>
-        Spend two minutes with the experience and create a list of each of your
-        discrete actions.
-      </h2>
-      <br />
-    </section>
-    <section>
-      <h2>
-        What part of the experience did you spend the most time engaging with?
-      </h2>
-    </section>
-    <br />
-    <section>
-      <h2>
-        What was the most common action in your two minute interaction with the
-        experience?
-      </h2>
-    </section>
-    <br />
-    <section>
-      <h2>
-        What is your impression of the intended primary goal of the interactive
-        experience?
-      </h2>
-    </section>
-    <br />
-    <section>
-      <h2>
-        How does the interactive experience communicate this primary goal?
-      </h2>
-    </section>
-    <br />
-    <section>
-      <h2>
-        What is your impression of how the experience should be interacted with
-        over time? (For how long and how many different times)
-      </h2>
-    </section>
-    <br />
-    <section>
-      <h2>
-        How does the interactive experience communicate how it should be
-        interacted with over time?
-      </h2>
-    </section>
-    <br />
-    <section>
-      <h2>
-        What other media forms (digital or otherwise) does the experience
-        reference?
-      </h2>
-    </section>
-    <br />
-    <section>
-      <h2>
-        What does this reference/s communicate to you about how you should act
-        when engaging with your research experience?
-      </h2>
-    </section>
-    <br />
-    <section>
-      <h2>
-        What does this reference/s communicate to you about how you should feel
-        when engaging with your research experience?
-      </h2>
-    </section>
-    <br />
-    <section>
-      <h2>
-        What is the most frustrating part of the interaction to you and what
-        makes that part frustrating?
-      </h2>
-    </section>
-    <br />
-    <section>
-      <h2>
-        What is the most satisfying part of the interaction to you and what
-        makes that part satisfying?
-      </h2>
+    <header>
+      <h1>Research Experience Interaction Analysis</h1>
+    </header>
+
+    <section class="container">
+      <div class="box1">            <!--organise each box, look neater -->
+        <a href="https://www.richbrown.info/">
+          <img src="box1.png" alt="Image description" class="box-image" />
+        </a>
+        <h2>
+          What was the first thing you paid attention to when interacting with
+          the experience?
+        </h2>
+        <p>Answer:</p>
+        <p>
+          I observed that the design of this website was highly 
+          distinctive compared to others I have reviewed. The first
+          two elements that stood out to me were the color palette,
+          which was exceptionally well-executed, and the mouse cursor
+          effect. The cursor featured a trailing animation that
+          followed its movement, creating the impression that the 
+          user was actively drawing on the screen. 
+          This design choice enhanced the interactive experience 
+          and contributed to the website's uniqueness.
+        </p>
+      </div>
+
+      <div class="box2">
+        <a href="https://www.creative-tim.com/blog/educational-ui-ux/interactive-web-design-essentials/">
+          <img src="box2.png" alt="Image description" class="box-image" />
+        </a>
+        <h2>
+          Spend two minutes with the experience and create a list of each of
+          your discrete actions.
+        </h2>
+        <p>Answer:</p>
+        <p>
+          <ul>
+            <li>Move the mouse cursor</li>
+            <li>Scrolling Down and Up</li>
+            <li>Clicked on his initials</li>
+            <li>Clicked on his contacts information</li>
+            <li>Hovered over all of his works</li>
+            <li>Clicked on one of his works for a client</li>
+            <li>Clicked on his social media link</li>
+            <li>Scrolled to his "Awards Won"</li>
+            <li>Scrolled to End of Website</li>
+          </ul>
+        </p>
+      </div>
+
+      <div class="box3">
+        <a href="https://www.velocityconsultancy.com/elements-every-website-should-have/">
+          <img src="box3.jpg" alt="Image description" class="box-image" />
+        </a>
+        <h2>
+          What part of the experience did you spend the most time engaging with?
+        </h2>
+        <p>Answer:</p>
+        <p>
+          I spent most of my time looking through all of his projects, 
+          paying attention to how each one was designed to match what 
+          the client wanted. Every project had a different style, but 
+          I also noticed some similarities. For example, he used some
+           of the same fonts in multiple projects, which made his work
+            feel connected. His website designs were always
+             well-organized and easy to use, making it simple to
+              explore his work. The layouts were clean, and the 
+              interactive features made the experience smooth and 
+              engaging. Everything felt carefully planned to help 
+              users focus on the content without feeling lost or 
+              distracted.
+        </p>
+      </div>
+
+      <div class="box4">
+        <a href="https://www.istockphoto.com/illustrations/clip-art-of-interact">
+          <img src="box4.jpg" alt="Image description" class="box-image" />
+        </a>
+        <h2>
+          What was the most common action in your two-minute interaction with
+          the experience?
+        </h2>
+        <p>Answer:</p>
+        <p>
+          I spend most of my time scrolling through his website especially 
+          in his projects page.I went through clicking in those projects, exploring 
+          them. I also scanned through his work by reading and got the gist of what his 
+          client had in mind and how he managed to deliver. I observed each of his work
+          individually, and it was very professional and minimalistic.
+        </p>
+      </div>
+
+      <div class="box5">
+        <a href="https://www.bluehillsdigital.com/articles/website-purpose-seven-types/">
+          <img src="box5.jpg" alt="Image description" class="box-image" />
+        </a>
+        <h2>
+          What is your impression of the intended primary goal of the
+          interactive experience?
+        </h2>
+        <p>Answer:</p>
+        <p>
+          I would say that the primary goal of his website is to sell
+           his skills as a designer. Through the website, he effectively 
+           showcases his capabilities by incorporating smooth transitions
+            and clean animations that enhance the overall user experience.
+             These elements not only make the website visually appealing but
+              also highlight his proficiency in creating engaging and dynamic 
+              designs. Furthermore, he has strategically implemented a sense 
+              of familiarity in his design, which helps strengthen his branding
+               and makes the website feel cohesive and consistent. By doing 
+               this, he not only demonstrates his technical skills but also
+                establishes a clear identity, making it easier for potential
+                 clients to recognize and connect with his work.
+        </p>
+      </div>
+
+      <div class="box6">
+        <a href="https://www.bitcatcha.com/manage-website/goals/">
+          <img src="box6.png" alt="Image description" class="box-image" />
+        </a>
+        <h2>
+          How does the interactive experience communicate this primary goal?
+        </h2>
+        <p>Answer:</p>
+        <p>This whole interactive experience showcases his skills, animation
+          color pallette decision, design, and layout. The smooth transitions and 
+          animation throughout the website showcases his ability to create dynamic and
+          engaging user experience. These elements are not just visually appealing but also
+          serves an important function for his website. Furthermore, the layout and structure
+          reflect his attention to detail and understanding of user experience. By maintaining
+          a clean and well-organized design, he make sures that users has an easy time 
+          navigating his website. This level of simplicity and clarity in the design 
+          showcases his expertise in creating intuitive, user-friendly interfaces,
+           which is key in establishing credibility as a designer. I am also impressed
+           by his use of familiarity in his design. Examples including the layout and sometimes
+           the consistent fonts. This is a common way to enhance your brand, making 
+           potential customers to recognize his work. Though, most of the time it depends 
+           on the client's expectation.
+        </p>
+      </div>
+
+      <div class="box7">
+        <a href="https://optinmonster.com/how-to-engage-website-visitors/">
+          <img src="box7.jpg" alt="Image description" class="box-image" />
+        </a>
+        <h2>
+          What is your impression of how the experience should be interacted
+          with over time? (For how long and how many different times)
+        </h2>
+        <p>Answer:</p>
+        <p>
+          I spent approximately 10-15 minutes navigating through his 
+          website and reviewing all of his projects. The website is
+          highly organized and concise, allowing for a thorough 
+          exploration within a single session. The content is presented 
+          in a manner that is clear and accessible, ensuring that the user 
+          is able to easily engage with the information without the need
+           for multiple sessions. The design effectively curates the 
+           content in a way that guides the user through the material 
+           seamlessly. Although, it took me quite awhile to figure it out 
+           to scroll to navigate through his website. 
+        </p>
+
+      </div>
+
+      <div class="box8">
+        <a href="https://edgemesh.com/blog/what-is-time-to-interactive">
+          <img src="box8.png" alt="Image description" class="box-image" />
+        </a>
+        <h2>
+          How does the interactive experience communicate how it should be
+          interacted with over time?
+        </h2>
+        <p>Answer:</p>
+        <p>
+          The interactive experience communicates through it's design and layout.
+          It subtly suggests the ideal duration and frequency of interaction by providing clear, 
+          intuitive navigation and pacing that doesn’t overwhelm the user.
+           For instance, the website’s content is broken down into digestible 
+           sections, encouraging users to explore at their own pace. Elements 
+           such as smooth transitions and animations gives user a sense of 
+           progression. Overall, it is designed to be revisited multiple times
+           by different users.
+        </p>
+      </div>
+
+      <div class="box9">
+        <a href="https://www.newperspectivestudio.co.za/using-images-and-multimedia-in-web-design-the-importance-of-multimedia-in-web-design/">
+          <img src="box9.png" alt="Image description" class="box-image" />
+        </a>
+        <h2>
+          What other media forms (digital or otherwise) does the experience
+          reference?
+        </h2>
+        <p>Answer:</p>
+        <p>
+          Visually, the website implements elements commonly seen in games and videos
+          such as smooth transitions and motion-graphics. Additionally, the minimalistic
+          design takes the inspiration from modern web design, while the use of fonts 
+          and layouts hints at traditional print design and graphic design principles
+        </p>
+      </div>
+
+      <div class="box10">
+        <a href="https://cloudsystems.tech/understanding-user-behavior-2/">
+          <img src="box10.jpg" alt="Image description" class="box-image" />
+        </a>
+        <h2>
+          What does this reference/s communicate to you about how you should act
+          when engaging with your research experience?
+        </h2>
+        <p>Answer:</p>
+        <p>I went through this website with a focused and organised way.
+          The smooth animations and clear layout guide the users through 
+          the website step by step.  The use of digital and traditional design 
+          elements encourages the user to engage actively and thoughtfully,
+           paying attention to the details rather than rushing through the
+            experience. As, the contents in the website , isn't as much 
+            as you think, capturing every detail is crucial.
+        </p>
+      </div>
+
+      <div class="box11">
+        <a href="https://medium.com/@nandithamadhusudha/user-experience-beyound-functionality-the-impact-of-emotional-design-ad0840451aa4">
+          <img src="box11.png" alt="Image description" class="box-image" />
+        </a>
+        <h2>
+          What does this reference/s communicate to you about how you should
+          feel when engaging with your research experience?
+        </h2>
+        <p>Answer:</p>
+        <p>I went through this website with a calm and engaging mindset.
+          The clean and smooth transitions are designed to make the 
+          users feel more engaged and connected to this interactive 
+          experience. The author has created a comfortable atmosphere
+          for users to navigate through his website. This also allow users
+          to understand the full extent of his content without feeling 
+          to overwhelmed and rushed.
+        </p>
+      </div>
+
+      <div class="box12">
+        <a href="https://codetheorem.co/blogs/user-frustration-ui-ux">
+          <img src="box12.png" alt="Image description" class="box-image" />
+        </a>
+        <h2>
+          What is the most frustrating part of the interaction to you and what
+          makes that part frustrating?
+        </h2>
+        <p>Answer:</p>
+        <p>
+          The most frustrating aspect of the experience for me 
+          was the frequent lag spikes that occurred while 
+          navigating through this website. These interruptions 
+          caused delays, forcing me to wait for the website to
+           respond. This not only slowed down the 
+           overall experience but also disrupted the flow, making
+            it feel less smooth and efficient. The lag was 
+            particularly noticeable on some pages, which made the
+             interaction feel less seamless and more frustrating,
+              as I had to repeatedly pause and wait for the website
+               to catch up with my actions.
+      </p>
+      </div>
+
+      <div class="box13">
+        <a href="https://www.customer-alliance.com/en/articles/how-to-achieve-customer-satisfaction-focus-on-customer-feedback/">
+          <img src="box13.png" alt="Image description" class="box-image" />
+        </a>
+        <h2>
+          What is the most satisfying part of the interaction to you and what
+          makes that part satisfying?
+        </h2>
+        <p>Answer:</p>
+        <p>
+          The most satisfying parts are the mouse cursor and the animations, 
+          the main reason I chose this because I found the mouse cursor and animation
+          are the most unique. The animation when I'm scrolling down manage to
+          give an impression of an movie ending credits scene, which gave an cinematic feel. 
+          The mouse cursor's trail makes it seem like I was drawing something on his page, although there were frequent
+          lag spikes. Despite all it's flaws, I was able to enjoy this experience and 
+          possibly take one of these inspirations for my own website in the future. 
+        </p>
+      </div>
     </section>
   </body>
 </html>
