--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -296,7 +296,7 @@
           give an impression of an movie ending credits scene, which gave an cinematic feel. 
           The mouse cursor's trail makes it seem like I was drawing something on his page, although there were frequent
           lag spikes. Despite all it's flaws, I was able to enjoy this experience and 
-          possibly take one of these inspirations for my own website in the future. 
+          possibly take one of these inspirations for my own website in the far future. 
         </p>
       </div>
     </section>
