--- a/assignment2/index.html
+++ b/assignment2/index.html
@@ -17,10 +17,36 @@
     <script src="script.js"></script>
   </head>
   <body>
+    <div class="leaf-container">
+      <div class="leaf"></div>
+      <div class="leaf"></div>
+      <div class="leaf"></div>
+      <div class="leaf"></div>
+      <div class="leaf"></div>
+      <div class="leaf"></div>
+    </div>
+    
     <div class="container">
       <h1>Relax & Study</h1>
+      <img src="media/ghibli.gif" alt="Relaxing animation" class="gif" />
+      <div class="custom-audio-player">
+        <button id="play-pause-btn" onclick="togglePlayPause()">
+          <img src="play.png" id="play-icon" class="audio-icon" alt="Play" />
+          <img
+            src="pause-stop-play-icon.png"
+            id="pause-icon"
+            class="audio-icon"
+            alt="Pause"
+            style="display: none"
+          />
+        </button>
+        <div class="progress-container" onclick="seekAudio(event)">
+          <div class="progress-bar" id="progress-bar"></div>
+        </div>
+      </div>
+
       <audio id="audio-player" controls>
-        <source src="media/study.mp3" type="audio/mp3" />
+        <source src="study.mp3" type="audio/mp3" />
         Your browser doesn't support this audio file.
       </audio>
       <!-- timer UI for productivity sessions -->
@@ -34,10 +60,12 @@
           <option value="120">2 hours</option>
         </select>
 
-        <button id="start-button" onclick="startTimer()">Start</button>
+        <button id="start-button" onclick="toggleTimer()">Start</button>
         <!-- THIS is the start button -->
         <button id="reset-button" onclick="resetTimer()">Reset</button>
         <span id="countdown-display">0:00</span>
+        
+        </div>
       </div>
     </div>
   </body>
