--- a/assignment3/index.html
+++ b/assignment3/index.html
@@ -133,33 +133,17 @@
         />
       </div>
     </div>
-    <div class="key-map">
-      <div class="key-legend" data-key="q" style="--color: #ff4d4d">
-        Q - Guitar
-      </div>
-      <div class="key-legend" data-key="w" style="--color: #ffb34d">
-        W - Beats
-      </div>
-      <div class="key-legend" data-key="e" style="--color: #ffff4d">
-        E - Drop
-      </div>
-      <div class="key-legend" data-key="a" style="--color: #4dff4d">
-        A - Electric Guitar
-      </div>
-      <div class="key-legend" data-key="s" style="--color: #4dffff">
-        S - Funk
-      </div>
-      <div class="key-legend" data-key="d" style="--color: #4d4dff">
-        D - Lo-Fi
-      </div>
-      <div class="key-legend" data-key="z" style="--color: #b34dff">
-        Z - Piano
-      </div>
-      <div class="key-legend" data-key="x" style="--color: #ff4db3">
-        X - Rhodes
-      </div>
-      <div class="key-legend" data-key="c" style="--color: #4dffb3">
-        C - Vocal
+    <!-- Tutorial Overlay -->
+    <div class="tutorial-overlay" id="tutorial">
+      <div class="tutorial-content">
+        <p>
+          Press keys <span class="key">Q</span>, <span class="key">W</span>,
+          <span class="key">E</span>, <span class="key">A</span>,
+          <span class="key">S</span>, <span class="key">D</span>,
+          <span class="key">Z</span>, <span class="key">X</span>,
+          <span class="key">C</span> to play sounds!
+        </p>
+        <p>Click to start jamming!</p>
       </div>
     </div>
     <script src="script.js"></script>
