--- a/assignment3/index.html
+++ b/assignment3/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div class="dj-frame">
+      <canvas id="globalVisualizer"></canvas>
       <div class="top-bar"></div>
 
       <!-- Screws -->
@@ -19,31 +20,31 @@
       <!-- This is the grid container where sound boxes should go -->
       <div class="container">
         <div class="sound1">
-          <button class="sound-box">Sound 1</button>
+          <button class="sound-box"></button>
         </div>
         <div class="sound2">
-          <button class="sound-box">Sound 2</button>
+          <button class="sound-box"></button>
         </div>
         <div class="sound3">
-          <button class="sound-box">Sound 3</button>
+          <button class="sound-box"></button>
         </div>
         <div class="sound4">
-          <button class="sound-box">Sound 4</button>
+          <button class="sound-box"></button>
         </div>
         <div class="sound5">
-          <button class="sound-box">Sound 5</button>
+          <button class="sound-box"></button>
         </div>
         <div class="sound6">
-          <button class="sound-box">Sound 6</button>
+          <button class="sound-box"></button>
         </div>
         <div class="sound7">
-          <button class="sound-box">Sound 7</button>
+          <button class="sound-box"></button>
         </div>
         <div class="sound8">
-          <button class="sound-box">Sound 8</button>
+          <button class="sound-box"></button>
         </div>
         <div class="sound9">
-          <button class="sound-box">Sound 9</button>
+          <button class="sound-box"></button>
         </div>
       </div>
 
